# mastr-utils

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  __init__.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: mastrtogpx.yml
data/: bevoelkerung.csv  gebietsflaeche.csv
doc/: documentation.md  dokumentation.md  intro.md
docs/: _config.yml  bhkw.md  co2-emissions.md  examples_gpx.html  examples_plot.html  index.html
docs/_includes/: footer.html  header.html
docs/_layouts/: default.html  withinnerbody.html
docs/data/: stromerzeuger_pv_500k_brd.csv
energie_utils/: analyse_mastr.py  mastrtogpx.py
homepage/: homepage.py  uwsgi.ini
homepage/templates/: datenschutzerklaerung.html  footer.html  impressum.html  index.html  topbanner.html
mastr_utils/: analyse_mastr.py  cluster.py  mastrtogpx.py  mastrtoplot.py  symbols.py
mastrtogpx-webapp/: README.md
mastrtogpx-webapp/templates/: index.html
mastrweb/: mastrutils.py
mastrweb/templates/: topbanner.html
python/: mastrtogpx.py
services/: homeapp_service.ini  mastrapp_service.ini
smard/: battery_diagnostics.py  battery_simulation.py  claude_results_commented.md  energy_storage_analysis.py  energy_storage_analysis_v1.py  energy_storage_analysis_v2.py  energy_storage_analysis_v3.py  inspect_columns.py  meine_analyse.py  senec_analyes.py  smart_analyse.py  use_analysis.py
tests/: profile_code.py  test_0.py  test_gpx.py  test_plot.py  test_webapp.py
webapp/: app.py  howto_uberspace.txt  requirements.txt  sites-avaialbe-mastrutils  tmpdircleanup.py  uwsgi.ini
(+42 files in other folders)
