[project]
name = "mastr-utils"
version = "0.1.1"
description = ""
authors = [
    {name = "Eduard Moser",email = "eduard.moser@gmx.de"}
]
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "pandas (>=2)",
    "matplotlib (>=3.9,<4.0.0)",
    "seaborn (>=0.13)",
    "gpxpy (>=1.6,<2.0)",
    "scikit-learn (>=1.6,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uwsgi (>=2.0.28,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
